Resume Fix: fixed overflow since idk what was causing it when inspecting

--- a/client/src/components/Resume/resume.css
+++ b/client/src/components/Resume/resume.css
@@ -1,5 +1,6 @@
 .resume {
   margin: 0 10%;
+  overflow: hidden;
 }
 
 .resume__hero {
